Snapshot 05668dfad7

* First implementation of the alert bar #2822 and hooked it up 
  to the activity window (erikos)

Snapshot 9c5755d85a

* Put toolbars into event boxes so X fills the background correctly (benzea)

Snapshot 6c7c6a503b

* Activity launching refactoring. (marco)
* Improved logs. (marco)

Snapshot 143f9ac9c6

* Save activity previews to the datastore as binary png images. (tomeu)

Snapshot acca55e861

* #3905 Wait 3 seconds, rather than 3000, if NetworkManager doesn't respond
  (smcv)
* #3909 Cope with both dbus-python both before and after 0.82.2 (smcv)
* #3181 Show always myself in friendstray (erikos)
* #948 Fix passphrase encoding for some passphrases. (bertf)
* #948 Accept ascii passphrases for WEP networks. '$:1a2b3c4d' for hex keys,
  's:my passphrase' for 5 or 13 characters ascii passphrases, or just the plain
  key for ascii passphrases of any other length. (tomeu)
* #2477 Support dbus introspection in sugar-native-factory (bertf)
* #2674 Add arrows to hint about the frame corner activation (marco)
* #2665 Re-arrange device icons in a line at the bottom (marco)
* #3378 Support changes in activity scope (incomplete!) (smcv, marco)
* #3081, #3497, #3485 Fix palette sizing and widget placement (benzea)
* #2211 New XRestop interface style in Developer Console (edsiper)

Snapshot b8ce5083b7

* #3601 Always remove invites from the frame. (cassidy)

Snapshot b8ce5083b7

* #3560 Updated spanish translation. (marco)

Snapshot b8ce5083b7

* Handle the passing of the child of the toolitem to the WidgetInvoker in ToolInvoker, FrameWidgetInvoker (erikos) 
* #3293 Fix that several palettes are not hooked up to the same button (erikos)
* #3514 Remove invite when the activiy disappear from the mesh. (cassidy)
* #3003 Make image drags on the clipboard work consistently. (marco)

Snapshot 8ef6c57f8b

* #3478 Fix handling of non-default types. (bertf)

Snapshot 0a666e23cf

* #2977 Associate activity with his journal object if there is one. (marco)