@@ -1,3 +1,5 @@
+* Register to the school server from XO palette (marco)
+
 Snapshot 05668dfad7
 
 * First implementation of the alert bar #2822 and hooked it up 
